--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -1076,10 +1076,10 @@ jobs:
       S3_SECRET_KEY: {{loggregator-team-s3-secret-key}}
       BLOBSTORE_BUCKET: log-cache-release-blobs
       SSH_KEY: {{loggregator-key}}
-      NEW_VERSION: "0.2"
+      NEW_VERSION: "1.0.0"
       RELEASE_NAME: "Log Cache"
       TO_BRANCH: develop
-      FROM_BRANCH: v1
+      FROM_BRANCH: master
   - put: log-cache-release-master
     params:
       repository: repos/from-repo
