Go get dependencies
Use correct tools resource in latency job

--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -210,7 +210,7 @@ jobs:
   public: false
   serial: true
   plan:
-  - get: loggregator
+  - get: loggregator-tools
   - get: loggregator-ci
   - get: 15m
     trigger: true
