--- a/tasks/latency-test.yml
+++ b/tasks/latency-test.yml
@@ -22,13 +22,17 @@ run:
         -s "$SPACE" \
         -o "$ORG"
 
-      export GOPATH=$PWD/loggregator-tools
+      mkdir -p build-workspace/src/code.cloudfoundry.org/loggregator-tools
+      cp -r loggregator-tools/. build-workspace/src/code.cloudfoundry.org/loggregator-tools/
 
-      cd loggregator-tools/latency
+      cd build-workspace
+      export GOPATH=$PWD
 
+      cd build-workspace/src/code.cloudfoundry.org/loggregator-tools/latency
+      go get -d -u ./...
       go build
 
-      ./cf/push.sh
+      cf/push.sh
 
       sleep 30
       latency=$(curl --retry 10 "$APP_DOMAIN/latency?samples=100")
