update loggregator tools resource for pws us latency test
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/pws-us-blackbox-tests.yml
+++ b/pipelines/pws-us-blackbox-tests.yml
@@ -298,7 +298,7 @@ jobs:
   public: false
   serial: true
   plan:
-  - get: loggregator
+  - get: loggregator-tools
   - get: loggregator-ci
   - get: 20m
     trigger: true
