Change LOG_CACHE_ADDR to LOG_CACHE_URL for blackbox tests
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/tasks/log-cache-blackbox/task.yml
+++ b/tasks/log-cache-blackbox/task.yml
@@ -53,8 +53,8 @@ params:
   PASSWORD:
 
   # - Required
-  # - The base address for log cache.
-  LOG_CACHE_ADDR:
+  # - The URL for log cache.
+  LOG_CACHE_URL:
 
   # - Required
   # - The UAA Client
