--- a/tasks/log-cache-group-blackbox/task.yml
+++ b/tasks/log-cache-group-blackbox/task.yml
@@ -54,7 +54,7 @@ params:
 
   # - Required
   # - The base address for log cache.
-  LOG_CACHE_ADDR:
+  LOG_CACHE_URL:
 
   # - Required
   # - The UAA Client
