--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -331,7 +331,7 @@ jobs:
       APP_ADDR: "log-cache-blackbox.coconut.cf-app.com"
       SYSTEM_DOMAIN: "coconut.cf-app.com"
       DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      LOG_CACHE_ADDR: http://log-cache.coconut.cf-app.com
+      LOG_CACHE_URL: http://log-cache.coconut.cf-app.com
       ORG: system
       SPACE: blackbox-testing
       USERNAME: {{coconut-username}}
@@ -345,7 +345,7 @@ jobs:
       APP_ADDR: "log-cache-blackbox.coconut.cf-app.com"
       SYSTEM_DOMAIN: "coconut.cf-app.com"
       DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      LOG_CACHE_ADDR: http://log-cache.coconut.cf-app.com
+      LOG_CACHE_URL: http://log-cache.coconut.cf-app.com
       ORG: system
       SPACE: blackbox-testing
       USERNAME: {{coconut-username}}
