Clean up loggregator release pipeline
 - copy task from create-final-release but just echo git repo commands

Signed-off-by: Todd Persen <tpersen@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -34,29 +34,24 @@ jobs:
 - name: loggregator-create-backport-release
   serial: true
   plan:
-  - get: loggregator-backport
+  - aggregate:
+    - get: loggregator-backport
+    - get: loggregator-release-backport
+    - get: loggregator-ci
   - task: create-backport
-    config:
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      platform: linux
-      params:
-        S3_BUCKET_NAME: loggregator-release-blobs
-        S3_ACCESS_KEY: {{s3-access-key}}
-        S3_SECRET_KEY: {{s3-secret-key}}
-        SSH_KEY: {{loggregator-key}}
-        NEW_VERSION: "101.11"
-        BRANCH_NAME: *backport-branch
-      inputs:
-      - name: loggregator-backport
-      outputs:
-      - name: github-release
-      - name: create-final-release
-      run:
-        path: bash
-        file: loggregator-ci/tasks/loggregator-create-release/task.yml
+    file: loggregator-ci/tasks/loggregator-create-release/task.yml
+    input_mapping:
+      to-repo: loggregator-release-backport
+      from-repo: loggregator-backport
+    params:
+      S3_ACCESS_KEY: {{s3-access-key-id}}
+      S3_SECRET_KEY: {{s3-secret-access-key}}
+      BLOBSTORE_BUCKET: loggregator-release-blobs
+      SSH_KEY: {{loggregator-key}}
+      NEW_VERSION: "101.11"
+      RELEASE_NAME: "Loggregator"
+      TO_BRANCH: develop
+      FROM_BRANCH: master
   - put: loggregator-release-backport
     params:
       repository: create-final-release/loggregator-backport
