--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -41,7 +41,6 @@ jobs:
   - task: create-backport
     file: loggregator-ci/tasks/loggregator-create-release/task.yml
     input_mapping:
-      to-repo: loggregator-release-backport
       from-repo: loggregator-backport
     params:
       S3_ACCESS_KEY: {{s3-access-key-id}}
@@ -50,8 +49,7 @@ jobs:
       SSH_KEY: {{loggregator-key}}
       NEW_VERSION: "101.11"
       RELEASE_NAME: "Loggregator"
-      TO_BRANCH: develop
-      FROM_BRANCH: master
+      FROM_BRANCH: *backport-branch
   - put: loggregator-release-backport
     params:
       repository: create-final-release/loggregator-backport
