Clean up outputs in loggregator-create-release
[#156475839]

Signed-off-by: Peter Stone <pstone@pivotal.io>

--- a/tasks/loggregator-create-release/task.yml
+++ b/tasks/loggregator-create-release/task.yml
@@ -17,7 +17,7 @@ outputs:
 - name: github-release
 
   # - The modified repos that need to be pushed back to github
-- name: repos
+- name: merge-result
 
 run:
   path: loggregator-ci/tasks/loggregator-create-release/task
