Enable git commands and final bosh release
[#156475839]

Signed-off-by: Peter Stone <pstone@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -52,7 +52,7 @@ jobs:
       FROM_BRANCH: *backport-branch
   - put: loggregator-release-backport
     params:
-      repository: create-final-release/loggregator-backport
+      repository: release-repo
       rebase: false
   - put: loggregator-github-release-drafts
     params:
