Fix resource name in loggregator pipeline
[#156475839]

Signed-off-by: Peter Stone <pstone@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -39,7 +39,7 @@ jobs:
       NEW_VERSION: "101.11"
       RELEASE_NAME: "Loggregator"
       FROM_BRANCH: *backport-branch
-  - put: loggregator-release-backport
+  - put: loggregator-backport
     params:
       repository: release-repo
       rebase: false
