Fix firehose reliability tests that broke due to the loggregator-tools move.
[#157256179]

Signed-off-by: Todd Persen <tpersen@pivotal.io>

--- a/tasks/firehose-reliability-test.yml
+++ b/tasks/firehose-reliability-test.yml
@@ -6,6 +6,7 @@ image_resource:
 inputs:
 - name: loggregator
 - name: loggregator-ci
+- name: loggregator-tools
 params:
   SKIP_CERT_VERIFY: false
   WORKER_INSTANCE_COUNT: 1
