--- a/pipelines/coconut-blackbox-tests.yml
+++ b/pipelines/coconut-blackbox-tests.yml
@@ -231,8 +231,10 @@ jobs:
   public: false
   serial: true
   plan:
-  - get: loggregator
-  - get: loggregator-ci
+  - aggregate:
+    - get: loggregator
+    - get: loggregator-ci
+    - get: loggregator-tools
   - get: 10m
     trigger: true
   - task: run-firehose-reliability
