--- a/pipelines/pws-us-blackbox-tests.yml
+++ b/pipelines/pws-us-blackbox-tests.yml
@@ -350,23 +350,23 @@ jobs:
     - get: loggregator-ci
     - get: 10m
       trigger: true
-  - aggregate:
-    # - task: push-datadog-accumulator
-    #   file: loggregator-ci/tasks/datadog-accumulator/task.yml
-    #   params:
-    #     APP_NAME: "log-cache-data-dog-accumulator"
-    #     SYSTEM_DOMAIN: "run.pivotal.io"
-    #     DATADOG_API_KEY: {{datadog-prod-api-key}}
-    #     ORG: cf-lamb
-    #     SPACE: development
-    #     USERNAME: {{pws-username}}
-    #     PASSWORD: {{pws-password}}
-    #     LOG_CACHE_HTTP_ADDR: https://log-cache.run.pivotal.io
-    #     LOG_CACHE_GROUP_NAME: "log-cache-datadog-accumulator"
-    #     LOG_CACHE_SOURCE_ID_WHITELIST: log-cache
-    #     UAA_CLIENT: {{pws-uaa-client}}
-    #     UAA_CLIENT_SECRET: {{pws-uaa-client-secret}}
-    #   timeout: 5m
+  # - aggregate:
+  #   - task: push-datadog-accumulator
+  #     file: loggregator-ci/tasks/datadog-accumulator/task.yml
+  #     params:
+  #       APP_NAME: "log-cache-data-dog-accumulator"
+  #       SYSTEM_DOMAIN: "run.pivotal.io"
+  #       DATADOG_API_KEY: {{datadog-prod-api-key}}
+  #       ORG: cf-lamb
+  #       SPACE: development
+  #       USERNAME: {{pws-username}}
+  #       PASSWORD: {{pws-password}}
+  #       LOG_CACHE_HTTP_ADDR: https://log-cache.run.pivotal.io
+  #       LOG_CACHE_GROUP_NAME: "log-cache-datadog-accumulator"
+  #       LOG_CACHE_SOURCE_ID_WHITELIST: log-cache
+  #       UAA_CLIENT: {{pws-uaa-client}}
+  #       UAA_CLIENT_SECRET: {{pws-uaa-client-secret}}
+  #     timeout: 5m
   - aggregate:
     - task: log-cache-blackbox-tests
       file: loggregator-ci/tasks/log-cache-blackbox/task.yml
