Build and push docker images for log-cache
[#157010773]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/docker-images/agent/Dockerfile
+++ b/docker-images/agent/Dockerfile
@@ -1,8 +1,22 @@
+FROM golang:latest as builder
+
+COPY / /go/
+
+ENV CGO_ENABLED=0 \
+    GOOS=linux \
+    GOARCH=amd64
+
+RUN go build \
+    -a \
+    -installsuffix nocgo \
+    -o /agent \
+    code.cloudfoundry.org/loggregator-agent/cmd/agent
+
 FROM alpine:latest
 
-ENV AGENT_CERT_FILE="/srv/agent/certs/agent.crt" \
-    AGENT_KEY_FILE="/srv/agent/certs/agent.key" \
-    AGENT_CA_FILE="/srv/agent/certs/ca.crt" \
+ENV AGENT_CERT_FILE="/srv/certs/agent.crt" \
+    AGENT_KEY_FILE="/srv/certs/agent.key" \
+    AGENT_CA_FILE="/srv/certs/ca.crt" \
     AGENT_PORT="3458" \
     AGENT_INCOMING_UDP_PORT="3457" \
     AGENT_PPROF_PORT="6060" \
@@ -17,7 +31,6 @@ EXPOSE 3458 \
        6060 \
        6061
 
-RUN mkdir -p /srv/agent/bin
-COPY agent /srv/agent/bin/agent
-WORKDIR /srv/agent/
-CMD [ "/srv/agent/bin/agent" ]
+COPY --from=builder /agent /srv/
+WORKDIR /srv
+CMD [ "/srv/agent" ]
