--- a/docker-images/rlp/Dockerfile
+++ b/docker-images/rlp/Dockerfile
@@ -1,8 +1,22 @@
+FROM golang:latest as builder
+
+COPY / /go/
+
+ENV CGO_ENABLED=0 \
+    GOOS=linux \
+    GOARCH=amd64
+
+RUN go build \
+    -a \
+    -installsuffix nocgo \
+    -o /rlp \
+    code.cloudfoundry.org/loggregator/rlp
+
 FROM alpine:latest
 
-ENV RLP_CERT_FILE="/srv/rlp/certs/rlp.crt" \
-    RLP_KEY_FILE="/srv/rlp/certs/rlp.key" \
-    RLP_CA_FILE="/srv/rlp/certs/ca.crt" \
+ENV RLP_CERT_FILE="/srv/certs/rlp.crt" \
+    RLP_KEY_FILE="/srv/certs/rlp.key" \
+    RLP_CA_FILE="/srv/certs/ca.crt" \
     RLP_METRIC_EMITTER_INTERVAL="1m" \
     RLP_PORT="8082" \
     RLP_PPROF_PORT="6060" \
@@ -13,7 +27,6 @@ EXPOSE 8082 \
        6060 \
        6061
 
-RUN mkdir -p /srv/rlp/bin
-COPY rlp /srv/rlp/bin/rlp
-WORKDIR /srv/rlp/
-CMD [ "/srv/rlp/bin/rlp" ]
+COPY --from=builder /rlp /srv/
+WORKDIR /srv
+CMD [ "/srv/rlp" ]
