--- a/docker-images/log-cache-scheduler/Dockerfile
+++ b/docker-images/log-cache-scheduler/Dockerfile
@@ -21,7 +21,6 @@ ENV NODE_ADDRS=log-cache:8080 \
     KEY_PATH="/srv/certs/log-cache.key" \
     ENV_DIR="/srv/conf.d"
 
-RUN mkdir -p /srv
-COPY --from=builder /log-cache-scheduler /srv/log-cache-scheduler
+COPY --from=builder /log-cache-scheduler /srv/
 WORKDIR /srv
 CMD [ "/bin/sh", "-c", "cat $ENV_DIR/* 2> /dev/null > /tmp/env; source /tmp/env; /srv/log-cache-scheduler" ]
