--- a/docker-images/base/Dockerfile
+++ b/docker-images/base/Dockerfile
@@ -34,3 +34,6 @@ RUN cd /tmp \
   && tar xzvf google-cloud-sdk.tar.gz -C /usr/local/share \
   && /usr/local/share/google-cloud-sdk/install.sh \
   && ln -s /usr/local/share/google-cloud-sdk/bin/gcloud /usr/local/bin/gcloud
+
+RUN wget -O /usr/local/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl \
+  && chmod +x /usr/local/bin/kubectl
